if(OPENICV_BUILD_EXAMPLES)
    if(UNIX AND NOT BUILD_SHARED_LIBS)
        message(WARNING "Dynamic modules are disabled under linux with static build")
    else()
        add_subdirectory(SimpleModule)
        icv_set_solution_folder(SimpleModule Examples)
    endif()
    
    add_subdirectory(SimplePipeline)
    icv_set_solution_folder(SimplePipeline Examples)
endif()
