
#Prerequsites
#find_package(Boost REQUIRED log filesystem system)
add_definitions(-DBOOST_LOG_DYN_LINK)
add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)

#add_subdirectory(RecordReplay_old)
#add_subdirectory(ReadVideo)
#add_subdirectory(RecordReplay)
#add_subdirectory(VideoComm)
#add_subdirectory(Display)




