
#find_package(Boost REQUIRED log filesystem system)
#add_definitions(-DBOOST_LOG_DYN_LINK)
#add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
#add_subdirectory(SimpleCam)
#add_subdirectory(IMUEthernet)
#add_subdirectory(LaneDetectionMT)
#add_subdirectory(Gps)
#add_subdirectory(LidarHDL)
#add_subdirectory(RadarConti)
#add_subdirectory(TuanDynamics)
#add_subdirectory(Mobileye)
#add_subdirectory(SickLDMRS)
#add_subdirectory(SensorFusion)
#add_subdirectory(Trajectory_tracking)
#add_subdirectory(Navigation)
#add_subdirectory(LidarPandar)
#add_subdirectory(LidarRobosens)
#add_subdirectory(RecordReplay)
#add_subdirectory(XiaopengDynamics)
#add_subdirectory(RemoteSensors)
#add_subdirectory(LaneChangeWarning)
#add_subdirectory(LaneDepartureWarning)
#add_subdirectory(ForwardCollisionWarning)
#add_subdirectory(PylonCam)
#add_subdirectory(ReadVideo)
#add_subdirectory(Comm)
#add_subdirectory(SSD)
#add_subdirectory(Display)
#add_subdirectory(GpsEthernet)
