
#Prerequsites
#find_package(Boost REQUIRED log filesystem system)
add_definitions(-DBOOST_LOG_DYN_LINK)
add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
#add_subdirectory(LidarPandar)
#add_subdirectory(LidarRobosens)
#add_subdirectory(LidarHDL)
# add_subdirectory(P7Dynamics)
 add_subdirectory(SimpleCam)
#add_subdirectory(IMUOxTS)
# add_subdirectory(RadarConti)
#add_subdirectory(CS55VehicleCan)
# add_subdirectory(GpsSerial)
# add_subdirectory(PosixSerialPort)
# add_subdirectory(Mobileye)
# add_subdirectory(Tricore)
# #add_subdirectory(PyFrontend)
# add_subdirectory(CAN_CANFD)
# #add_subdirectory(Localization_test)
#  add_subdirectory(FusionTracker)
add_subdirectory(baidu_static_map)